--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="Learning the basics of HTML for beginners"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>WebStudio</title>
     <link
@@ -58,6 +55,15 @@
             </li>
           </ul>
         </address>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="32" height="22">
+            <use href="./images/icons.svg#icon-charm_menu-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- Main -->
@@ -570,7 +576,87 @@
         </form>
       </div>
     </div>
-
+    <!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle-close js-close-menu">
+        <svg class="backdrop-button-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li>
+          <a href="./index.html" class="mobile-line link">Studio</a>
+        </li>
+        <li>
+          <a href="./portfolio.html" class="mobile-line link">Portfolio</a>
+        </li>
+        <li><a href="" class="mobile-line link">Contacts</a></li>
+      </ul>
+      <div>
+        <ul class="email-tel-info">
+          <li>
+            <a href="tel:+110001111111" class="tel-number link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="email-adr link"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="social-mob-icon list">
+          <li class="social-media">
+            <a
+              class="social-link"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="social-icon-img" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media">
+            <a
+              class="social-link"
+              href="https://www.twitter.com/"
+              target="_blank"
+              ><svg class="social-icon-img" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media">
+            <a
+              class="social-link"
+              href="https://www.facebook.com/"
+              target="_blank"
+              ><svg class="social-icon-img" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media">
+            <a
+              class="social-link"
+              href="https://www.linkedin.com/"
+              target="_blank"
+              ><svg class="social-icon-img" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
