--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </section>
 
       <!-- Section4 -->
-      <section class="section-team">
+      <section class="section-team section">
         <div class="container">
           <h2 class="team-workers">Our Team</h2>
           <ul class="list photo">
@@ -348,7 +348,7 @@
         </div>
       </section>
       <!-- Section 5 -->
-      <section class="customers">
+      <section class="customers section">
         <div class="container">
           <h2 class="section-name">Customers</h2>
           <ul class="clients">
