--- a/index.html
+++ b/index.html
@@ -143,13 +143,28 @@
           <h2 class="company-activity">What are we doing</h2>
           <ul class="list picture-company">
             <li class="pic-description">
-              <img src="./images/img1.jpg" alt="picture" width="360" />
+              <img
+                srcset="./images/Rectangle 71@2x.jpg"
+                src="./images/img1.jpg"
+                alt="picture"
+                width="360"
+              />
             </li>
             <li class="pic-description">
-              <img src="./images/img2.jpg" alt="picture2" width="360" />
+              <img
+                srcset="./images/Rectangle 72@2x.jpg"
+                src="./images/img2.jpg"
+                alt="picture2"
+                width="360"
+              />
             </li>
             <li class="pic-description">
-              <img src="./images/img3.jpg" alt="picture3" width="360" />
+              <img
+                srcset="./images/Rectangle 73@2x.jpg"
+                src="./images/img3.jpg"
+                alt="picture3"
+                width="360"
+              />
             </li>
           </ul>
         </div>
@@ -161,7 +176,12 @@
           <h2 class="team-workers">Our Team</h2>
           <ul class="list photo">
             <li class="specialists">
-              <img src="./images/img4.jpg" alt="picture4" width="264" />
+              <img
+                srcset="./images/mark@2x.jpg"
+                src="./images/img4.jpg"
+                alt="picture4"
+                width="264"
+              />
               <div class="profession">
                 <h3 class="valuables-list-subtitle">Mark Guerrero</h3>
                 <p class="valuables-list-descr">Product Designer</p>
@@ -208,7 +228,12 @@
               </div>
             </li>
             <li class="specialists">
-              <img src="./images/img5.jpg" alt="picture5" width="264" />
+              <img
+                srcset="./images/tom@2x.jpg"
+                src="./images/img5.jpg"
+                alt="picture5"
+                width="264"
+              />
               <div class="profession">
                 <h3 class="valuables-list-subtitle">Tom Ford</h3>
                 <p class="valuables-list-descr">Frontend Developer</p>
@@ -254,7 +279,12 @@
             </li>
 
             <li class="specialists">
-              <img src="./images/img6.jpg" alt="picture6" width="264" />
+              <img
+                srcset="./images/camila@2x.jpg"
+                src="./images/img6.jpg"
+                alt="picture6"
+                width="264"
+              />
               <div class="profession">
                 <h3 class="valuables-list-subtitle">Camila Garcia</h3>
                 <p class="valuables-list-descr">Marketing</p>
@@ -300,7 +330,12 @@
             </li>
 
             <li class="specialists">
-              <img src="./images/img7.jpg" alt="picture7" width="264" />
+              <img
+                srcset="./images/daniel@2x.jpg"
+                src="./images/img7.jpg"
+                alt="picture7"
+                width="264"
+              />
               <div class="profession">
                 <h3 class="valuables-list-subtitle">Daniel Wilson</h3>
                 <p class="valuables-list-descr">UI Designer</p>
